상세 페이지 세팅(설명은 추가 수정 필요)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="./assets/images/logo.png">
   <link rel="stylesheet" href="./style/reset.css">
   <link rel="stylesheet" href="./style/index.css">
-  <title>🥕 HAPPY HELKI </title>
+  <title>🥕 HAPPY HELKI BITE</title>
 </head>
 <body>
   <main>
