--- a/pages/result-04.html
+++ b/pages/result-04.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>폭신폭신 성향인 당신의 짝꿍은</p>
-        <h3>키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-1.png" alt="키토 김밥">
-        <p>🥕338.63kacl</p>
-        <p class="desc">밥 대신 부드럽고 푹신한<br>헬키푸키 특제 계란지단과 각종 야채가 듬뿍!!</p>
+        <p>담백 고소한 성향인 당신의 짝꿍은</p>
+        <h3>연어 키토김밥</h3>
+        <img class="menu-img" src="../assets/images/menu-4.png" alt="연어 키토김밥">
+        <p>🐟 395.59kacl</p>
+        <p class="desc">비타민A, D와 오메가3가 풍부하여 <br/> 혈액 순환을 돕고 노화방지 효과를 가진 키토김밥</p>
       </article>
     </section>
 
