--- a/pages/result-05.html
+++ b/pages/result-05.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>폭신폭신 성향인 당신의 짝꿍은</p>
-        <h3>키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-1.png" alt="키토 김밥">
-        <p>🥕338.63kacl</p>
-        <p class="desc">밥 대신 부드럽고 푹신한<br>헬키푸키 특제 계란지단과 각종 야채가 듬뿍!!</p>
+        <p>단짠단짠 성향인 당신의 짝꿍은</p>
+        <h3>베이컨 키토김밥</h3>
+        <img class="menu-img" src="../assets/images/menu-5.png" alt="베이컨 키토김밥">
+        <p>🥓 388.42kacl</p>
+        <p class="desc">비타민과 미네랄이 풍부하여<br/>면역력 증진에 도움을 주는 키토김밥</p>
       </article>
     </section>
 
