--- a/pages/result-06.html
+++ b/pages/result-06.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>폭신폭신 성향인 당신의 짝꿍은</p>
-        <h3>키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-1.png" alt="키토 김밥">
-        <p>🥕338.63kacl</p>
-        <p class="desc">밥 대신 부드럽고 푹신한<br>헬키푸키 특제 계란지단과 각종 야채가 듬뿍!!</p>
+        <p>건강미 넘치는 당신의 짝꿍은</p>
+        <h3>묵은지 참치 키토김밥</h3>
+        <img class="menu-img" src="../assets/images/menu-6.png" alt="묵은지 참치 키토 김밥">
+        <p>🥬 380.39kacl</p>
+        <p class="desc">유산균 듬뿍! 노화가 방지되고<br/>신진대사가 촉진되는 키토김밥</p>
       </article>
     </section>
 
