--- a/pages/result-03.html
+++ b/pages/result-03.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>폭신폭신 성향인 당신의 짝꿍은</p>
-        <h3>키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-1.png" alt="키토 김밥">
-        <p>🥕338.63kacl</p>
-        <p class="desc">밥 대신 부드럽고 푹신한<br>헬키푸키 특제 계란지단과 각종 야채가 듬뿍!!</p>
+        <p>담백 고소한 성향인 당신의 짝꿍은</p>
+        <h3>참치 키토김밥</h3>
+        <img class="menu-img" src="../assets/images/menu-3.png" alt="참치 키토김밥">
+        <p>🐟 405.83kacl</p>
+        <p class="desc">비타민, 미네랄이 풍부하여<br/>노화 방지, 빈혈 예방에도 좋은 키토김밥</p>
       </article>
     </section>
 
