--- a/pages/result-07.html
+++ b/pages/result-07.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>폭신폭신 성향인 당신의 짝꿍은</p>
-        <h3>키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-1.png" alt="키토 김밥">
-        <p>🥕338.63kacl</p>
-        <p class="desc">밥 대신 부드럽고 푹신한<br>헬키푸키 특제 계란지단과 각종 야채가 듬뿍!!</p>
+        <p>건강과 맛을 생각하는 당신의 짝꿍은</p>
+        <h3>현미강황 크래미김밥</h3>
+        <img class="menu-img" src="../assets/images/menu-7.png" alt="묵현미강황 크래미김밥">
+        <p>🌾 422.17kacl</p>
+        <p class="desc">미네랄과 섬유질이 풍부한 현미에<br/>항산화, 항염 효과가 있는 키토김밥</p>
       </article>
     </section>
 
