--- a/pages/result-09.html
+++ b/pages/result-09.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>폭신폭신 성향인 당신의 짝꿍은</p>
-        <h3>키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-1.png" alt="키토 김밥">
-        <p>🥕338.63kacl</p>
-        <p class="desc">밥 대신 부드럽고 푹신한<br>헬키푸키 특제 계란지단과 각종 야채가 듬뿍!!</p>
+        <p>분식 러버인 당신의 짝꿍은</p>
+        <h3>저당 스리라차 떡볶이</h3>
+        <img class="menu-img" src="../assets/images/menu-9.png" alt="저당 스리라차 떡볶이">
+        <p>🌶️ 465.29kacl</p>
+        <p class="desc">미네랄과 섬유질이 풍부한 현미떡에 <br/> 고추장 없이 스리라차 베이스 소스로<br/> 맛을 낸 저칼로리 떡볶이</p>
       </article>
     </section>
 
