--- a/pages/result-10.html
+++ b/pages/result-10.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>폭신폭신 성향인 당신의 짝꿍은</p>
-        <h3>키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-1.png" alt="키토 김밥">
-        <p>🥕338.63kacl</p>
-        <p class="desc">밥 대신 부드럽고 푹신한<br>헬키푸키 특제 계란지단과 각종 야채가 듬뿍!!</p>
+        <p>시원시원한 성향인 당신의 짝꿍은</p>
+        <h3>저당 메밀 물냉면</h3>
+        <img class="menu-img" src="../assets/images/menu-10.png" alt="저당 메밀 물냉면">
+        <p>🧊 515.96kacl</p>
+        <p class="desc">저당 육수에 단백질, 항산화제, 미네랄이 <br/> 풍부한 맛을 낸 물냉면</p>
       </article>
     </section>
 
