--- a/pages/result-19.html
+++ b/pages/result-19.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>폭신폭신 성향인 당신의 짝꿍은</p>
-        <h3>키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-1.png" alt="키토 김밥">
-        <p>🥕338.63kacl</p>
-        <p class="desc">밥 대신 부드럽고 푹신한<br>헬키푸키 특제 계란지단과 각종 야채가 듬뿍!!</p>
+        <p>가벼운 삶을 사는 당신의 짝꿍은</p>
+        <h3>불고기 샐러드</h3>
+        <img class="menu-img" src="../assets/images/menu-19.png" alt="불고기 샐러드">
+        <p>🥗 560.95kacl</p>
+        <p class="desc">쫄깃한 면, 각종 야채에 대체당을 사용한 <br/> 특제 양념 소스를 더해 매콤하고 맛있게!</p>
       </article>
     </section>
 
