결과 정보 추가 수정, 랜덤 결과 도출 완료

--- a/pages/result-1.html
+++ b/pages/result-1.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>담백 고소한 성향인 당신의 짝꿍은</p>
-        <h3>참치 키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-3.png" alt="참치 키토김밥">
-        <p>🐟 405.83kacl</p>
-        <p class="desc">비타민, 미네랄이 풍부하여<br/>노화 방지, 빈혈 예방에도 좋은 키토김밥</p>
+        <p>폭신폭신 성향인 당신의 짝꿍은</p>
+        <h3>키토김밥</h3>
+        <img class="menu-img" src="../assets/images/menu-1.png" alt="키토 김밥">
+        <p>🥕338.63kacl</p>
+        <p class="desc">밥 대신 부드럽고 푹신한<br>헬키푸키 특제 계란지단과 각종 야채가 듬뿍!!</p>
       </article>
     </section>
 
@@ -39,7 +39,7 @@
       </div>
       <div class="share-btns-box">
         <button type="button" id="btn-copy-code">코드 복사하기</button>
-        <button type="button" id="btn-kakao">카카오 공유하기</button>
+        <button type="button" id="btn-url">카카오 공유하기</button>
       </div>
     </section>
   </main>
