--- a/pages/result-11.html
+++ b/pages/result-11.html
@@ -24,7 +24,7 @@
         <h3>저당 메밀 비빔냉면</h3>
         <img class="menu-img" src="../assets/images/menu-11.png" alt="저당 메밀 비빔냉면">
         <p>🌶️ 560.95kacl</p>
-        <p class="desc">쫄깃한 면, 각종 야채에 대체당을 사용한 <br/> 특제 양념 소스를 더해 매콤하고 맛있게!</p>
+        <p class="desc"> 특제 저당 양념장에 단백질, 항산화제,<br/> 미네랄이 풍부한 비빔냉면</p>
       </article>
     </section>
 
@@ -39,7 +39,7 @@
       </div>
       <div class="share-btns-box">
         <button type="button" id="btn-copy-code">코드 복사하기</button>
-        <button type="button" id="btn-kakao">카카오 공유하기</button>
+        <button type="button" id="btn-url">카카오 공유하기</button>
       </div>
     </section>
   </main>
