--- a/pages/result-16.html
+++ b/pages/result-16.html
@@ -23,8 +23,11 @@
         <p>가벼운 삶을 사는 당신의 짝꿍은</p>
         <h3>닭가슴살 샐러드</h3>
         <img class="menu-img" src="../assets/images/menu-16.png" alt="닭가슴살 샐러드">
-        <p>🥗 560.95kacl</p>
-        <p class="desc">쫄깃한 면, 각종 야채에 대체당을 사용한 <br/> 특제 양념 소스를 더해 매콤하고 맛있게!</p>
+        <p>🥗 337.88kacl</p>
+        <p class="desc">
+          7종 토핑과 당일 신선한 5종 야채믹스에<br/>
+          저지방 고단백 닭가슴살 건강 샐러드
+        </p>
       </article>
     </section>
 
@@ -39,7 +42,7 @@
       </div>
       <div class="share-btns-box">
         <button type="button" id="btn-copy-code">코드 복사하기</button>
-        <button type="button" id="btn-kakao">카카오 공유하기</button>
+        <button type="button" id="btn-url">카카오 공유하기</button>
       </div>
     </section>
   </main>
