--- a/pages/result-20.html
+++ b/pages/result-20.html
@@ -23,8 +23,12 @@
         <p>특별함을 추구하는 당신의 짝꿍은</p>
         <h3>라이트 닭가슴살 브리또</h3>
         <img class="menu-img" src="../assets/images/menu-20.png" alt="라이트 닭가슴살 브리또">
-        <p>🌯 560.95kacl</p>
-        <p class="desc">쫄깃한 면, 각종 야채에 대체당을 사용한 <br/> 특제 양념 소스를 더해 매콤하고 맛있게!</p>
+        <p>🌯 532.45kacl</p>
+        <p class="desc">
+          면역력 증진, 항산화 효과가 있는 클로렐라 또띠아에
+          미네랄, 아미노산이 풍부한 닭가슴살과
+          각종 야채가 풍성하게 더해진 브리또
+        </p>
       </article>
     </section>
 
@@ -39,7 +43,7 @@
       </div>
       <div class="share-btns-box">
         <button type="button" id="btn-copy-code">코드 복사하기</button>
-        <button type="button" id="btn-kakao">카카오 공유하기</button>
+        <button type="button" id="btn-url">카카오 공유하기</button>
       </div>
     </section>
   </main>
