--- a/pages/result-9.html
+++ b/pages/result-9.html
@@ -20,11 +20,11 @@
       </h2>
 
       <article class="content">
-        <p>단짠단짠 성향인 당신의 짝꿍은</p>
-        <h3>베이컨 키토김밥</h3>
-        <img class="menu-img" src="../assets/images/menu-5.png" alt="베이컨 키토김밥">
-        <p>🥓 388.42kacl</p>
-        <p class="desc">비타민과 미네랄이 풍부하여<br/>면역력 증진에 도움을 주는 키토김밥</p>
+        <p>분식 러버인 당신의 짝꿍은</p>
+        <h3>저당 스리라차 떡볶이</h3>
+        <img class="menu-img" src="../assets/images/menu-9.png" alt="저당 스리라차 떡볶이">
+        <p>🌶️ 465.29kacl</p>
+        <p class="desc">미네랄과 섬유질이 풍부한 현미떡에 <br/> 고추장 없이 스리라차 베이스 소스로<br/> 맛을 낸 저칼로리 떡볶이</p>
       </article>
     </section>
 
@@ -39,7 +39,7 @@
       </div>
       <div class="share-btns-box">
         <button type="button" id="btn-copy-code">코드 복사하기</button>
-        <button type="button" id="btn-kakao">카카오 공유하기</button>
+        <button type="button" id="btn-url">카카오 공유하기</button>
       </div>
     </section>
   </main>
