--- a/pages/result-13.html
+++ b/pages/result-13.html
@@ -23,8 +23,10 @@
         <p>한식을 사랑하는 당신의 짝꿍은</p>
         <h3>라이트 참치 덮밥</h3>
         <img class="menu-img" src="../assets/images/menu-13.png" alt="라이트 참치 덮밥">
-        <p>🍚 560.95kacl</p>
-        <p class="desc">쫄깃한 면, 각종 야채에 대체당을 사용한 <br/> 특제 양념 소스를 더해 매콤하고 맛있게!</p>
+        <p>🍚 737.81kacl</p>
+        <p class="desc">오메가 3가 풍부한 참치, 현미강황밥과<br/>
+          헬키푸키 특제 저당 소스, 데리야끼 소스가 만나<br/>
+          달콤하고 맛있는 건강식 덮밥</p>
       </article>
     </section>
 
@@ -39,7 +41,7 @@
       </div>
       <div class="share-btns-box">
         <button type="button" id="btn-copy-code">코드 복사하기</button>
-        <button type="button" id="btn-kakao">카카오 공유하기</button>
+        <button type="button" id="btn-url">카카오 공유하기</button>
       </div>
     </section>
   </main>
