--- a/pages/result-22.html
+++ b/pages/result-22.html
@@ -23,8 +23,10 @@
         <p>특별함을 추구하는 당신의 짝꿍은</p>
         <h3>라이트 크래미 브리또</h3>
         <img class="menu-img" src="../assets/images/menu-22.png" alt="라이트 크래미 브리또">
-        <p>🌯 560.95kacl</p>
-        <p class="desc">쫄깃한 면, 각종 야채에 대체당을 사용한 <br/> 특제 양념 소스를 더해 매콤하고 맛있게!</p>
+        <p>🌯 517.65kacl</p>
+        <p class="desc">
+          클로렐라 또띠아에 촉촉한 닭가슴살, 단백질과 칼슘이 풍부한 크래미와 각종 야채가 어우러진 브리또
+        </p>
       </article>
     </section>
 
@@ -39,7 +41,7 @@
       </div>
       <div class="share-btns-box">
         <button type="button" id="btn-copy-code">코드 복사하기</button>
-        <button type="button" id="btn-kakao">카카오 공유하기</button>
+        <button type="button" id="btn-url">카카오 공유하기</button>
       </div>
     </section>
   </main>
