버튼 내용 수정

--- a/pages/result-16.html
+++ b/pages/result-16.html
@@ -42,7 +42,7 @@
       </div>
       <div class="share-btns-box">
         <button type="button" id="btn-copy-code">코드 복사하기</button>
-        <button type="button" id="btn-url">카카오 공유하기</button>
+        <button type="button" id="btn-url">URL 복사하기</button>
       </div>
     </section>
   </main>
