사이트 완성

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
   <main>
+    <div class="event-banner">
+      <a href="./pages/coupon.html">
+        <img src="./assets/images/ico-coupon.svg" alt="">
+        <p>공유 이벤트 참여하기</p>
+      </a>
+    </div>
     <section class="start">
       <h1>HAPPY<br/>HELKI<br/>BITE</h1>
       <img class="logo" src="./assets/images/logo.png" alt="메인 로고">
@@ -32,7 +38,6 @@
         <img id="question-img" class="question-img" src="" alt="">
 
         <div class="answer-box" id="answer-box"></div>
-      
       </article>
     </section>
   </main>
