--- a/pages/result-9.html
+++ b/pages/result-9.html
@@ -10,6 +10,12 @@
 </head>
 <body>
   <main>
+    <div class="event-banner">
+      <a href="../pages/coupon.html">
+        <img src="../assets/images/ico-coupon.svg" alt="">
+        <p>공유 이벤트 참여하기</p>
+      </a>
+    </div>
     <h1 class="screen_out">결과 화면</h1>
     <section class="result">
       <h2>
