이벤트 페이지 문구 수정

--- a/pages/coupon.html
+++ b/pages/coupon.html
@@ -19,7 +19,7 @@
         </a>
       </h2>
       <div class="code-area">
-        <p class="small">건강한 식사를 하는 친구로부터</p>
+        <p class="small">헬키푸키를 사랑하는 친구로부터</p>
         <p class="big">5천원 쿠폰이<br />도착했어요</p>
         <p>
           친구로부터 공유받은 코드를 입력하면<br />
